# article_tracker

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  config_soil_acidification.yaml  index.html  pyproject.toml
.github/workflows/: tracker_daily.yml  tracker_soil_daily.yml
.state/: seen.json
archive/: 20260528_0339.html  20260528_0357.html  20260528_0452.html  20260528_1616.html  20260529_0300.html  20260530_0504.html  20260531_0532.html  20260601_0016.html  20260601_0256.html  20260602_0023.html  20260602_0554.html  20260603_0158.html  20260603_0608.html  20260604_0202.html  20260604_0604.html  20260605_0025.html  20260605_0527.html  20260606_0015.html  20260606_0457.html  20260607_0008.html  20260607_0528.html  20260608_0020.html  20260608_0556.html  20260609_0015.html  20260609_0510.html  20260610_0024.html  20260610_0525.html  20260611_0025.html  20260611_0538.html  20260612_0031.html  20260612_0558.html  20260613_0025.html  20260613_0528.html  20260614_0012.html  20260614_0550.html  20260615_0019.html  20260615_0631.html  20260616_0152.html  20260616_0640.html  20260617_0030.html  (+76 more)
article_tracker/: api.py  cli.py
article_tracker/collect/: collector.py
article_tracker/config/: config.py  config_schema.py  migrate.py
article_tracker/dedup/: deduplicator.py  seen_store.py
article_tracker/enrich/: abstract_enricher.py  code_link_enricher.py  llm_enricher.py
article_tracker/infra/: http_client.py  logging.py  retry.py
article_tracker/source/: base.py  (+2 more)
references/: research-profile.md  top-journal-families.md
tests/: test_core.py
(+18 files in other folders)
